--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
             <nav class="nav-bar">
                 <a href="./" class="logo"><span class="logo-blue-web">Web</span>Studio</a>
                 <ul class="navigation">
-                    <li> <a class="navigation-item" href="#">Studio</a></li>
-                    <li> <a class="navigation-item" href="./portfolio.html">Portfolio</a></li>
+                    <li> <a class="navigation-item" href="./index.html">Studio</a></li>
+                    <li> <a class="navigation-item current-window" href="./portfolio.html">Portfolio</a></li>
                     <li> <a class="navigation-item" href="./">Contacts</a></li>
                 </ul>
             </nav>
@@ -46,7 +46,11 @@
             <ul class="projects-list">
                 <li class="project-list-item">
                    <a href="#" class="project-link"> 
+                    <div class="project-image-wrapper">
                     <img class="project-image no-gap" src="images/img1.jpg" alt="purple screens for banking app" width="360">
+                    <p class="project-image-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                    Cloud Storage App</p>
+                    </div>
                     <div class="project-card">
                         <h3 class="project-title">Banking App Interface Concept</h3>
                         <p class="project-type">App</p>
@@ -55,7 +59,12 @@
                 </li>
                 <li class="project-list-item">
                     <a href="#" class="project-link">
-                        <img class="project-image no-gap" src="images/img2.jpg" alt="phone to payment terminal" width="360">
+                        <div class="project-image-wrapper">
+                            <img class="project-image no-gap" src="images/img2.jpg" alt="phone to payment terminal" width="360">
+                            <p class="project-image-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                            Tracker App · Exotic Fruit Ecommerce App ·
+                            Cloud Storage App</p>
+                        </div>
                         <div class="project-card">
                             <h3 class="project-title">Cashless Payment</h3>
                             <p class="project-type">Marketing</p>
@@ -64,7 +73,12 @@
                 </li>
                 <li class="project-list-item">
                     <a href="#" class="project-link">
-                        <img class="project-image no-gap" src="images/img3.jpg" alt="laptop and phone showing the same website or app" width="360">
+                        <div class="project-image-wrapper">
+                            <img class="project-image no-gap" src="images/img3.jpg" alt="laptop and phone showing the same website or app" width="360">
+                            <p class="project-image-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                                Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="project-card">
                             <h3 class="project-title">Meditation App</h3>
                             <p class="project-type">App</p>
@@ -73,7 +87,12 @@
                 </li>
                 <li class="project-list-item">
                     <a href="#" class="project-link">
-                        <img class="project-image no-gap" src="images/img4.jpg" alt="car wheel and the driver's hand holding it" width="360">
+                        <div class="project-image-wrapper">
+                            <img class="project-image no-gap" src="images/img4.jpg" alt="car wheel and the driver's hand holding it" width="360">
+                            <p class="project-image-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                                Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="project-card">
                             <h3 class="project-title">Taxi Service</h3>
                             <p class="project-type">Marketing</p>
@@ -82,7 +101,12 @@
                 </li>
                 <li class="project-list-item">
                     <a href="#" class="project-link">
-                        <img class="project-image no-gap" src="images/img5.jpg" alt="phone with main screen and four app screeens on the right" width="360">
+                        <div class="project-image-wrapper">
+                            <img class="project-image no-gap" src="images/img5.jpg" alt="phone with main screen and four app screeens on the right" width="360">
+                            <p class="project-image-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                                Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="project-card">
                             <h3 class="project-title">Screen Illustrations</h3>
                             <p class="project-type">Design</p>
@@ -91,7 +115,12 @@
                 </li>
                 <li class="project-list-item">
                     <a href="#" class="project-link">
-                        <img class="project-image no-gap" src="images/img6.jpg" alt="young woman in orange sweater, sunglasses and grey hat holding an headphone and a phone" width="360">
+                        <div class="project-image-wrapper">
+                            <img class="project-image no-gap" src="images/img6.jpg" alt="young woman in orange sweater, sunglasses and grey hat holding an headphone and a phone" width="360">
+                            <p class="project-image-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                                Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="project-card">    
                             <h3 class="project-title">Online Courses</h3>
                             <p class="project-type">Marketing</p>
@@ -100,7 +129,12 @@
                 </li>
                 <li class="project-list-item">
                     <a href="#" class="project-link">
-                        <img class="project-image no-gap" src="images/img7.jpg" alt="versions of app screens in soft pink" width="360">
+                        <div class="project-image-wrapper">
+                            <img class="project-image no-gap" src="images/img7.jpg" alt="versions of app screens in soft pink" width="360">
+                            <p class="project-image-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                                Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="project-card">
                             <h3 class="project-title">Instagram Stories Concept</h3>
                             <p class="project-type">Design</p>
@@ -109,7 +143,12 @@
                 </li>
                 <li class="project-list-item">
                     <a href="#" class="project-link">
-                        <img class="project-image no-gap" src="images/img8.jpg" alt="a person from neck down holding a mesh bag with vegetables" width="360">
+                        <div class="project-image-wrapper">
+                            <img class="project-image no-gap" src="images/img8.jpg" alt="a person from neck down holding a mesh bag with vegetables" width="360">
+                            <p class="project-image-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                                Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="project-card">
                             <h3 class="project-title">Organic Food</h3>
                             <p class="project-type">Web Site</p>
@@ -118,7 +157,12 @@
                 </li>
                 <li class="project-list-item">
                     <a href="#" class="project-link">
-                        <img class="project-image no-gap" src="images/img9.jpg" alt="someone adding the finishing touches to a cup up capuccino" width="360">
+                        <div class="project-image-wrapper">
+                            <img class="project-image no-gap" src="images/img9.jpg" alt="someone adding the finishing touches to a cup up capuccino" width="360">
+                            <p class="project-image-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                                Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="project-card">
                             <h3 class="project-title">Fresh Coffee</h3>
                             <p class="project-type">Web Site</p>
