--- a/index.html
+++ b/index.html
@@ -262,6 +262,6 @@
         </div>
     </footer>
 
-    <script src="../js/modal.js"></script>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
